# footballmodel

./: README.md  pyproject.toml
.github/workflows/: pipeline.yml  tests.yml
.streamlit/: pages.toml
app/: Overview.py  app.py
app/pages/: 1X2.py  Asian_Handicap.py  BTTS.py  Backtest_Lab.py  Correct_Score.py  Experiments.py  Fixture_Drilldown.py  History.py  Over_Under_2_5.py  Run_Control.py  Todays_Value_Bets.py
config/: clubelo_sources.yaml  football_data_sources.yaml  leagues.yaml  runtime.yaml  schedules.yaml  thresholds.yaml
scripts/: automation_run.sh  run_pipeline.py
src/footballmodel/: __init__.py  ui_dashboard.py
src/footballmodel/backtest/: walkforward.py
src/footballmodel/config/: runtime_env.py  settings.py
src/footballmodel/data/: schemas.py
src/footballmodel/features/: feature_builder.py
src/footballmodel/ingestion/: clubelo.py  football_data.py  snapshot.py  team_mapping.py
src/footballmodel/live/: __init__.py  monitoring.py
src/footballmodel/markets/: benchmark.py  benchmark_snapshots.py  derivation.py  value.py
src/footballmodel/model/: blending.py  (+1 more)
tests/: conftest.py  test_backtest_evaluation_flow.py  test_backtest_leakage.py  test_benchmark_snapshots.py  test_dashboard_smoke.py  test_experiment_sweep.py  test_ingestion.py  test_live_monitoring.py  test_market_consistency.py  test_pipeline_e2e_integration.py  test_pipeline_no_predictions.py  test_probability_coherence.py  test_repo_smoke.py  test_repository_defensive.py  test_runtime_env.py  test_team_mapping_integrity.py  test_temporal_features.py  test_value_pipeline.py
(+2 files in other folders)
