[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "footballmodel"
version = "0.1.0"
description = "Private football prediction and value-detection platform"
requires-python = ">=3.12"
dependencies = [
  "polars>=1.8.0",
  "duckdb>=1.0.0",
  "pyarrow>=17.0.0",
  "scipy>=1.14.0",
  "numpy>=2.0.0",
  "PyYAML>=6.0.0",
  "pydantic>=2.8.0",
  "requests>=2.32.0",
  "streamlit>=1.40.0",
  "pandas>=2.2.0"
]

[project.optional-dependencies]
test = [
  "pytest>=8.3.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
